--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,15 @@ input:-webkit-autofill:focus {
     -webkit-text-fill-color: #000 !important;
 }
 
+select {
+    background-color: #fff !important;
+    border: 1px solid #000 !important;
+    box-shadow: none !important;
+    -webkit-appearance: menulist !important;
+    appearance: menulist !important;
+    color: #000 !important;
+}
+
 .window,
 .standard-dialog {
     min-width: 0 !important;
@@ -206,10 +215,10 @@ input:-webkit-autofill:focus {
 
 @media (min-width: 600px) and (max-width: 1024px) {
     #root > div > div {
-        max-width: 480px !important;
+        max-width: 580px !important;
         margin-left: auto !important;
         margin-right: auto !important;
-        margin-top: 130px !important;
+        margin-top: 20px !important;
     }
 }
 
